final chnages applied

--- a/index.html
+++ b/index.html
@@ -12,18 +12,21 @@
         <h1 class="TASK-title">TASK</h1>
         <button class="add-task-btn">+</button>
     </div>
-    <div class="controls">
-        <button class="start-all-btn">Start</button>
-        <button class="end-session-btn">End Session</button>
-    </div>
     <div class="progress-navigation">
-        <p>0 Tasks | 0 In Progress | 0 Done </p>
-    </div>
+<p>0 Task | 0 In Progress | 0 Done </p> </div>
     </header>
 
 <main>
-    <section class="task-list" id="task-list">
+    <section class="task-list">
+
     </section>
+<div class="donow">
+    <div class="head-donow">
+        <p>Do Now</p> <div class="completion-summary">0</div>
+        <button class="start-all-btn">Start All</button>
+    </div>
+
+</div>
 
 </main>
     <!-- add-task-pop-up -->
@@ -38,20 +41,64 @@
                 </div>
                 
                 <div class="input-field">
-                <label for="task-date">Task Date</label>
+                <label for="task-date">Due Date</label>
                 <input type="date" id="task-date" >
                 </div>
                 <div class="input-field">
-                <label for="task-time">Task Time</label>
+                <label for="task-time">Due Time</label>
                 <input type="time" id="task-time" >
                
                 </div>
                 <div class="input-field">
-                <label for="task-duration">Duration (minutes)</label>
-                <input type="number" id="task-duration" min="1" value="25">
+                <label>Duration</label>
+                <div class="duration-inputs" style="display:flex; gap:8px; align-items:center;">
+                    <div>
+                        <label for="task-duration-hours">Hours</label>
+                        <input type="number" id="task-duration-hours" min="0" value="0">
+                    </div>
+                    :
+                    <div>
+                        <label for="task-duration-minutes">Minutes</label>
+                        <input type="number" id="task-duration-minutes" min="0" max="59" value="0">
+                    </div>
+                    :
+                    <div>
+                        <label for="task-duration-seconds">Seconds</label>
+                        <input type="number" id="task-duration-seconds" min="0" max="59" value="0">
+                    </div>
+                </div>
+                </div>
+                <div class="input-field">
+                <label for="task-state">Task State</label>
+                <select id="task-state" >
+                    <option value="Done">Done</option>
+                    <option value="In Progress">In Progress</option>
+                    <option value="Not started">Not Started</option>
+                </select>
+                </div>
+                <div class="input-field">
+                <label for="task-priority">Priority</label>
+                <select id="task-priority" >
+                    <option value="High">High</option>
+                    <option value="Medium">Medium</option>
+                    <option value="Low">Low</option>
+                </select>
                 </div>
                 <button type="submit" class="submit-btn">Add Task</button>
             </form>
+        </div>
+    </div>
+    <!-- timer popup -->
+    <div class="timer-popup">
+        <div class="timer-popup-content">
+            <div class="timer-display"></div>
+
+            <div class="taskname"></div>
+            <div class="countdown-display"  >
+                <h3><span id="countdown-timer">00:00:00</span></h3>
+            </div>
+            <div class="pauseResume"><button class="pause-resume-btn">Pause</button></div>
+            <div class="skiptask"><button>Skip Task</button></div>
         </div>
     </div>
 
