--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 <div class="donow">
     <div class="head-donow">
         <p>Do Now</p> <div class="completion-summary">0</div>
-        <button class="start-all-btn">Start All</button>
+        <a href="pages/timer.html" class="start-all-btn" >Start All</a>
     </div>
 
 </div>
@@ -34,10 +34,11 @@
         <div class="popup-content">
             <div class="close-btn">X</div>
             <h2>Add New Task</h2>
-            <form action="#">
+            <form id="task-form" action="#">
                 <div class="input-field">
-                <label for="task-title">Task Title</label>
-                <input type="text" id="task-title" >
+                <label for="task-title">Task Title <span style="color: red;">*</span></label>
+                <input type="text" id="task-title" required minlength="1" placeholder="Enter task name...">
+                <div class="error-message" id="title-error" style="display: none; color: red; font-size: 0.9rem;">Task name is required!</div>
                 </div>
                 
                 <div class="input-field">
@@ -71,17 +72,17 @@
                 <div class="input-field">
                 <label for="task-state">Task State</label>
                 <select id="task-state" >
-                    <option value="Done">Done</option>
-                    <option value="In Progress">In Progress</option>
                     <option value="Not started">Not Started</option>
+                    <option value="In Progress">In Progress</option>
+                    <option value="Done">Done</option>
                 </select>
                 </div>
                 <div class="input-field">
                 <label for="task-priority">Priority</label>
                 <select id="task-priority" >
-                    <option value="High">High</option>
-                    <option value="Medium">Medium</option>
                     <option value="Low">Low</option>
+                    <option value="Medium">Medium</option>
+                    <option value="High">High</option>
                 </select>
                 </div>
                 <button type="submit" class="submit-btn">Add Task</button>
@@ -103,5 +104,5 @@
     </div>
 
 </body>
-<script src="script.js"></script>
+<script type="module" src="script.js"></script>
 </html>
